{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 45,
  "lineage": "3008d04d-f6c6-7420-c65d-8cabf3cd1a6f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:675523930231:internet-gateway/igw-0de465ad1048f21b9",
            "id": "igw-0de465ad1048f21b9",
            "owner_id": "675523930231",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-0e8110a6f7bd1f076"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:675523930231:loadbalancer/app/frontend-LB/4995b4bcf4eaf7c4",
            "arn_suffix": "app/frontend-LB/4995b4bcf4eaf7c4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-LB-1330403837.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:675523930231:loadbalancer/app/frontend-LB/4995b4bcf4eaf7c4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-LB",
            "security_groups": [
              "sg-0505ca2eb5f10acb0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03089541bd8cb9949"
              },
              {
                "subnet_id": "subnet-0b64e6d5d7bdd5aaf"
              }
            ],
            "subnets": [
              "subnet-03089541bd8cb9949",
              "subnet-0b64e6d5d7bdd5aaf"
            ],
            "vpc_id": "vpc-0e8110a6f7bd1f076",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.frontend_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:675523930231:listener/app/frontend-LB/4995b4bcf4eaf7c4/a75aa077771ea15e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:675523930231:targetgroup/ELB-TG/305c412b113c6e4a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:675523930231:listener/app/frontend-LB/4995b4bcf4eaf7c4/a75aa077771ea15e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:675523930231:loadbalancer/app/frontend-LB/4995b4bcf4eaf7c4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testvpc",
            "aws_lb.elb",
            "aws_lb_target_group.elb_tg",
            "aws_security_group.frontend_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:675523930231:targetgroup/ELB-TG/305c412b113c6e4a",
            "arn_suffix": "targetgroup/ELB-TG/305c412b113c6e4a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:675523930231:targetgroup/ELB-TG/305c412b113c6e4a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ELB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e8110a6f7bd1f076"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "elb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:675523930231:route-table/rtb-07d4d23c1f58f7d47",
            "id": "rtb-07d4d23c1f58f7d47",
            "owner_id": "675523930231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de465ad1048f21b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8110a6f7bd1f076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0245ae16e1524a15e",
            "route_table_id": "rtb-07d4d23c1f58f7d47",
            "subnet_id": "subnet-0b64e6d5d7bdd5aaf"
          },
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_route_table.routetable",
            "aws_subnet.private_subnet",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c743261ef07c546b",
            "route_table_id": "rtb-07d4d23c1f58f7d47",
            "subnet_id": "subnet-03089541bd8cb9949"
          },
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_route_table.routetable",
            "aws_subnet.public_subnet",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:675523930231:security-group/sg-06d51510c8fd31faf",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d51510c8fd31faf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0505ca2eb5f10acb0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "backend-SG",
            "name_prefix": "",
            "owner_id": "675523930231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-SG"
            },
            "tags_all": {
              "Name": "backend-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8110a6f7bd1f076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frontend_sg",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:675523930231:security-group/sg-0505ca2eb5f10acb0",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0505ca2eb5f10acb0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-SG",
            "name_prefix": "",
            "owner_id": "675523930231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-SG"
            },
            "tags_all": {
              "Name": "frontend-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8110a6f7bd1f076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:675523930231:subnet/subnet-0b64e6d5d7bdd5aaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b64e6d5d7bdd5aaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675523930231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0e8110a6f7bd1f076"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:675523930231:subnet/subnet-03089541bd8cb9949",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03089541bd8cb9949",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675523930231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0e8110a6f7bd1f076"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:675523930231:vpc/vpc-0e8110a6f7bd1f076",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000f8c768b4e4fe0d",
            "default_route_table_id": "rtb-0bb357ece8693b97f",
            "default_security_group_id": "sg-0cdf1331d6db69802",
            "dhcp_options_id": "dopt-0a398f1ae943231a4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e8110a6f7bd1f076",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb357ece8693b97f",
            "owner_id": "675523930231",
            "tags": {
              "Name": "Test-VPC"
            },
            "tags_all": {
              "Name": "Test-VPC"
            }
          }
        }
      ]
    }
  ]
}